# GlobeRunners_dev

./: .gitignore  README.md  main.py  pyproject.toml  test.drawio
cardpooUI/: app copy 2.py  app copy.py  app.py
cardpooUI/assets/: custom.css
cardpooUI/decks_saved/: GlobeRunners_Demons_starter_deck.txt  GlobeRunners_Dwarves_starter_deck.txt  GlobeRunners_Twigs_starter_deck.txt  Twigs_starter.txt  deck01.txt  dwadwa.txt
lib/artdesign/: __init__.py  image_qwen_python.json  test.py
lib/artdesign/debug/: debug_art_style.ipynb  debug_im_layers.ipynb  earth_map.ipynb  support_factions.ipynb
lib/cardpool/: cardpool.parquet  debug_YDB.ipynb  fac_Demons.parquet  fac_Dwarves.parquet  fac_Miaous.parquet  fac_Mummies.parquet  fac_Orcs.parquet  fac_Twigs.parquet
