[project]
name = "genai-tcg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash>=3.2.0",
    "dash-bootstrap-components>=2.0.4",
    "dash-daq>=0.6.0",
    "dash-iconify>=0.1.2",
    "dash-mantine-components>=2.2.1",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pillow>=11.3.0",
    "polars>=1.32.3",
    "reportlab>=4.4.3",
    "websocket-client>=1.8.0",
]
